--- a/.github/workflows/dev_container.yml
+++ b/.github/workflows/dev_container.yml
@@ -23,7 +23,8 @@ on:
 jobs:
   build:
     name: Build and Push Container
-    runs-on: [runs-on,runner=8cpu-linux-x64,image=ubuntu24-full-x64,"run-id=${{ github.run_id }}",spot=false]
+    runs-on: ubuntu-latest
+    # runs-on: [runs-on,runner=8cpu-linux-x64,image=ubuntu24-full-x64,"run-id=${{ github.run_id }}",spot=false]
     steps:
       - uses: actions/checkout@v4
         with:
